--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 @charset 'utf-8';
 
-/* @import url("node_modules\bootstrap\dist\css\bootstrap.min.css"); */
+.navbar{
+    background-color: black;
+}
+
+.btn{ color: black;
+        background-color: white;
+        border-radius: 4px;
+
+}
+
+.btn:hover{
+    background-color: #e6e6e6;
+}
+
+.card{
+    display: block;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+/* #search-bar{ 
+    
+} */
