--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @charset 'utf-8';
 
+body{
+    background-color: black;
+}
+
 .navbar{
     background-color: black;
 }
@@ -17,11 +21,36 @@
 .card{
     display: block;
     margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    margin: 100px;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 /* #search-bar{ 
     
 } */
+
+
+
+#title{
+    text-align: center;
+    padding: 10px;
+}
+
+#vote_average{
+    padding: 10px;
+    color: black;
+}
+
+#genre{
+    padding: 10px;
+}
+
+#release_date{
+    padding: 10px;
+}
+
+#overview{
+    padding: 10px;
+    text-align: justify;
+}
