--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ body{
     padding: 0px;
 }
 
+#search-bar{
+    width: 550px;
+}
+
+#imagem{
+    margin-left: 50px;
+}
+
 .btn{ color: black;
         background-color: white;
         border-radius: 4px;
@@ -30,8 +38,6 @@ body{
     display: block;
     margin-top: 100px;
     margin: 100px;
-    /* margin-left: auto;
-    margin-right: auto; */
 }
 
 #title{
@@ -57,4 +63,87 @@ body{
 #overview{
     padding: 10px;
     text-align: justify;
+}
+
+#barra-de-pesquisa{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+/* celular */
+@media (max-width:600px){
+    
+    #container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    #barra-de-pesquisa{
+        position: relative;
+        justify-content: center;
+        width: 100%;
+    }
+
+    #search-bar{
+        width: 200px;
+    }
+
+    #imagem{
+        margin-left: 0px;
+    }
+
+    .card{
+        margin: 50px 14px;
+    }
+
+    #card-body{
+        display: block! important;
+    }
+
+    #imagemCard{
+        width: 100%! important;
+    }
+}
+
+/* tablet */
+@media (min-width: 601px) and (max-width: 1023px){
+    #container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    #barra-de-pesquisa{
+        position: relative;
+        justify-content: center;
+        width: 100%;
+    }
+
+    #search-bar{
+        width: 400px;
+    }
+
+    #imagem{
+        margin-left: 0px;
+    }
+
+    .card{
+        margin: 50px 14px;
+    }
+
+    #body{
+        background-position-y: 100px;
+    }
+
+    #imagemCard{
+        width: 40%! important;
+    }
+}
+
+@media (min-width: 1024px){
+    body{
+        background-position-y: 100px ;
+    }
 }
